<resources>

  <!-- App -->
  <string name="app_name">ResearchStack</string>

  <!-- Debug -->
  <string name="lorem_name">Lorem Ipsum</string>
  <string name="lorem_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
  <string name="lorem_medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</string>
  <string name="lorem_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

  <!-- Consent Section -->
  <string name="consent_section_welcome">Welcome</string>
  <string name="consent_section_data_gathering">Data Gathering</string>
  <string name="consent_section_privacy">Privacy</string>
  <string name="consent_section_data_use">Data Use</string>
  <string name="consent_section_time_commitment">Time Commitment</string>
  <string name="consent_section_study_survey">Study Survey</string>
  <string name="consent_section_study_tasks">Study Tasks</string>
  <string name="consent_section_withdrawing">Withdrawing</string>
  <string name="consent_learn_more">Learn More</string>

  <!-- Consent section learn more -->
  <string name="consent_section_more_info">Learn more</string>
  <string name="consent_section_more_info_data_gathering">Learn more about how data is gathered</string>
  <string name="consent_section_more_info_data_use">Learn more about how data is used</string>
  <string name="consent_section_more_info_privacy">Learn more about how your privacy and identity are protected</string>
  <string name="consent_section_more_info_welcome">Learn more about the study first</string>
  <string name="consent_section_more_info_study_survey">Learn more about the study survey</string>
  <string name="consent_section_more_info_time_commitment">Learn more about the study\'s impact on your time</string>
  <string name="consent_section_more_info_study_tasks">Learn more about the tasks involved</string>
  <string name="consent_section_more_info_withdrawing">Learn more about withdrawing</string>

  <!-- Consent sharing step -->
  <string name="consent_share_title">Sharing Options</string>
  <string name="consent_share_widely">Share my data with %1$s and qualified researchers worldwide</string>
  <string name="consent_share_only">Only share my data with %1$s</string>
  <string name="consent_share_description">%1$s will receive your study data from your participation in this study.\n\nSharing your coded study data more broadly (without information such as your name) may benefit this and future research.</string>
  <string name="consent_share_more_info">Learn more about data sharing</string>

  <!-- Consent Review step -->
  <string name="consent_review_title">Review</string>
  <string name="consent_review_alert_title">Review</string>
  <string name="consent_review_reason">By agreeing you confirm that you read the information and that you wish to take part in this research study.</string>
  <string name="consent_review_instruction">Review the form below, and tap Agree if you\'re ready to continue.</string>
  <string name="consent_name_title">Consent</string>
  <string name="consent_name_full">Full Name</string>
  <string name="consent_name_placeholder">Required</string>

  <string name="signature_page_title">Signature</string>
  <string name="consent_signature_title">Signature</string>
  <string name="consent_signature_instruction">Please sign using your finger on the line below.</string>
  <string name="consent_signature_placeholder">Sign Here</string>

  <!-- Settings -->
  <string name="settings_app">APP BEHAVIOR</string>
  <string name="settings_reminders">Activity Reminders</string>
  <string name="settings_auto_lock">Auto-Lock</string>
  <string name="settings_passcode">Change Passcode</string>
  <string name="settings_sharing">Sharing Options</string>
  <string name="settings_permissions">Permissions</string>
  <string name="settings_user_data">USER DATA</string>
  <string name="settings_review_consent">Review Consent</string>
  <string name="settings_export_data">Export Data</string>
  <string name="settings_legal">LEGAL</string>
  <string name="settings_privacy_policy">Privacy Policy</string>
  <string name="settings_license_info">License Information</string>
  <string name="settings_version">Version %1$s (%2$s)</string>

  <!-- Quiz -->
  <string name="quiz">Quiz</string>
  <string name="quiz_evaluation">Quiz Evaluation</string>
  <string name="quiz_evaluation_try_again">Try Again</string>
  <string name="quiz_evaluation_review_consent">Review Consent</string>
  <string name="quiz_evaluation_retake">Retake Quiz</string>
  <string name="quiz_evaluation_great_job">Great Job!</string>

  <!--Other -->
  <string name="step_skip">Skip this question</string>
  <string name="next">next</string>
  <string name="join_study">Join Study</string>
  <string name="read_consent_doc">Read consent document</string>
  <string name="email_consent_doc">Email consent Document</string>
  <string name="swipe_to_preview">Swipe to preview</string>
  <string name="send_email">Send Email</string>
  <string name="study_overview_email_subject">%1$s Consent Form</string>
  <string name="already_participating">Already Participating?</string>
  <string name="you_are_eligible">You are eligible to join the study.</string>
  <string name="tap_below">Tap the button below to begin the consent process</string>
  <string name="you_are_ineligible">Unfortunately, you are ineligible to join this study.</string>
  <string name="start_consent_button">Start</string>
  <string name="what_to_expect">What to Expect</string>
  <string name="name">Name</string>
  <string name="email">Email</string>
  <string name="disagree">Disagree</string>
  <string name="agree">Agree</string>
  <string name="sign_in">Sign In</string>
  <string name="add_password_hint">add password</string>
  <string name="password">Password</string>
  <string name="birthdate">Birthdate</string>
  <string name="male">Male</string>
  <string name="female">Female</string>
  <string name="height">Height</string>
  <string name="weight">Weight</string>
  <string name="weight_hint">add weight (lb)</string>
  <string name="passcode_instructions">Select a 4-digit passcode.\nSetting up a passcode will help provide quick and secure access to this application.</string>
  <string name="enter_passcode">enter passcode</string>
  <string name="passcode_instructions_confirmation">Re-enter your passcode</string>
  <string name="passcode_mismatch">Your passcodes are not identical. Please try again.</string>
  <string name="location_services">Location Services</string>
  <string name="location_services_description">Using your GPS will allow the app to advise you of air quality in your area. Your actual location will never be shared.</string>
  <string name="allow">Allow</string>
  <string name="granted">Granted</string>
  <string name="forgot_password">Forgot your password?</string>
  <string name="participant">Participant</string>
  <string name="signature_page_content">I agree to participate in this research Study</string>
  <string name="cancel">Cancel</string>
  <string name="activities">Activities</string>
  <string name="dashboard">Dashboard</string>
  <string name="learn">Learn</string>
  <string name="profile">Profile</string>
  <string name="clear">Clear</string>
  <string name="button_get_started">Get Started</string>
  <string name="button_done">Done</string>
  <string name="settings">Settings</string>
  <string name="medical_condition">Medical Conditions</string>
  <string name="biological_sex">Biological Sex</string>
  <string name="notifications">Notifications</string>
  <string name="enable_reminders">Enable Reminders</string>
  <string name="time">Time</string>
  <string name="security">Security</string>
  <string name="auto_lock">Auto-Lock</string>
  <string name="auto_lock_summary">The minimum amount of time it would take to see the pass-code screen when the app is paused.</string>
  <string name="auto_lock_default">1</string>
  <string name="change_passcode">Change Passcode</string>
  <string name="sharing_options">Sharing Options</string>
  <string name="consent">Consent</string>
  <string name="permissions">Permissions</string>
  <string name="review_consent">Review Consent</string>
  <string name="legal">Legal</string>
  <string name="privacy_policy">Privacy Policy</string>
  <string name="license_information">License Information</string>
  <string name="please_complete_step">Please complete this step before moving on</string>
  <string name="submit">Submit</string>
  <string name="btn_true">True</string>
  <string name="btn_false">False</string>
  <string name="eligibility">Eligibility</string>
  <string name="sign_up">Sign Up</string>
  <string name="ineligible">Ineligible</string>
  <string name="registration">Registration</string>
  <string name="additional_info">Additional Information</string>
  <string name="identification">Identification</string>
  <string name="thank_you">Thank you</string>
  <string name="format_step_title">Step %1$s of %2$s</string>

</resources>
