<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/notifications">
        <CheckBoxPreference
            android:key="enable_reminders"
            android:title="@string/enable_reminders"
            android:defaultValue="false" />
        <Preference
            android:key="reminders_time"
            android:title="@string/time" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/security">
        <ListPreference
            android:key="auto_lock_time"
            android:title="@string/auto_lock" />
        <Preference
            android:key="change_passcode"
            android:title="@string/change_passcode" />
        <Preference
            android:key="sharing_options"
            android:title="@string/sharing_options" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/consent">
        <Preference
            android:key="permissions"
            android:title="@string/permissions" />
        <Preference
            android:key="review_consent"
            android:title="@string/review_consent" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/legal">
        <Preference
            android:key="privacy_policy"
            android:title="@string/privacy_policy" />
        <Preference
            android:key="license_information"
            android:title="@string/license_information">
        </Preference>
    </PreferenceCategory>

    <Preference
        android:key="version"
        android:summary="@string/settings_version" />

</PreferenceScreen>