<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:gravity="center_horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ImageView
        android:id="@+id/eligible_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/you_are_eligible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/tap_below"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/start_consent_button"
        android:text="@string/start_consent_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>