<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:gravity="center_horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include layout="@layout/include_user_header_edit"/>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="52dp">

        <TextView
            android:text="@string/password"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="wrap_content"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/password"
            android:hint="@string/add_password_hint"
            android:inputType="textVisiblePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="52dp">

        <TextView
            android:text="@string/birthdate"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="wrap_content"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/birthdate"
        tools:text="Oct 21, 1985"
        android:textSize="18sp"
        android:clickable="true"
        style="@style/Widget.AppCompat.Spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/gender_radio_group"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="52dp">
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/male_radio"
            android:text="@string/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <View
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/female_radio"
            android:text="@string/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/data_instructions"
        android:text="@string/lorem_medium"
        android:padding="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>