<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/layout_studyoverview_landing_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:minHeight="72dp"
            android:minWidth="72dp"
            tools:src="@mipmap/ic_launcher"
            />

        <TextView
            android:id="@+id/layout_studyoverview_landing_title"
            style="@style/TextAppearance.AppCompat.Headline"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/lorem_name"
            />

        <TextView
            android:id="@+id/layout_studyoverview_landing_subtitle"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/lorem_name"
            />

        <Button
            android:id="@+id/layout_studyoverview_landing_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_consent_doc"
            />

        <Button
            android:id="@+id/layout_studyoverview_landing_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_consent_doc"
            />

        <TextView
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swipe_to_preview"
            />

    </LinearLayout>

</ScrollView>